<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/section_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#f000f0"
        android:textSize="40sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/achievements_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/facebook_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_layout_2"
        android:text="@string/facebook"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/twitter_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/facebook_share_button"
        android:layout_alignLeft="@+id/facebook_share_button"
        android:layout_alignRight="@+id/facebook_share_button"
        android:layout_alignStart="@+id/facebook_share_button"
        android:layout_below="@+id/facebook_share_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_layout_3"
        android:text="@string/twitter"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/section_name"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/points_scored_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/points_scored_"
            android:textColor="#123456"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:textColor="#ff0000"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/play_again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter_share_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_layout_1"
        android:text="@string/play_again"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/trophy"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/no_description"
        android:src="@drawable/trophy" />

</RelativeLayout>