<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qburst.quizapp.activities.QAStarterActivity" >

    <FrameLayout
        android:id="@+id/achievements_home_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/starter_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/leaderboard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:background="@drawable/button_layout_2"
            android:text="@string/leaderboard"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/achievements_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="170dp"
            android:background="@drawable/button_layout_2"
            android:text="@string/achievements"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/play_game"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="62dp"
            android:layout_marginTop="275dp"
            android:contentDescription="@string/no_description"
            android:src="@drawable/play_game" />

        <ImageView
            android:id="@+id/sound"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:contentDescription="@string/no_description"
            android:src="@drawable/sound_on" />

        <ImageView
            android:id="@+id/sign_in_or_out"
            android:layout_width="105dp"
            android:layout_height="35dp"
            android:background="#DF4A32"
            android:contentDescription="@string/no_description"
            android:src="@drawable/sign_in" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/sections_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >

        <TextView
            android:id="@+id/sections_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sections"
            android:textColor="#ff0000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="#00A700"
            android:numColumns="3" >
        </GridView>
    </FrameLayout>

</RelativeLayout>